==========
01/06/2009
==========

- bugfix c/ comportamento incorreto do controle de altura da area de queue
- marcacao de artigos do feed adicionados ao queue

HORAS TRABALHADAS: 4h