@@ -264,6 +264,7 @@ class UserBlogFeed extends B_Model
                     ON (a.aggregator_feed_id = b.aggregator_feed_id)
                 LEFT JOIN model_user_blog_entry AS c
                     ON (b.aggregator_feed_article_id = c.aggregator_feed_article_id) 
+                    AND (a.user_blog_id = c.user_blog_id)
                 WHERE a.enabled = 1 AND a.deleted = 0 AND b.article_date < ? 
                 AND a.hash = ? AND a.user_blog_id = (
                     SELECT user_blog_id
@@ -304,6 +305,7 @@ class UserBlogFeed extends B_Model
                     ON (a.aggregator_feed_id = b.aggregator_feed_id) 
                 LEFT JOIN model_user_blog_entry AS c
                     ON (b.aggregator_feed_article_id = c.aggregator_feed_article_id) 
+                    AND (a.user_blog_id = c.user_blog_id)
                 WHERE a.enabled = 1 AND a.deleted = 0 
                 AND b.article_date < ? AND a.user_blog_id = (
                     SELECT user_blog_id
