@@ -4,5 +4,6 @@
 
 - bugfix c/ comportamento incorreto do controle de altura da area de queue
 - marcacao de artigos do feed adicionados ao queue
+- marcacao de entradas do queue para publicacao
 
-HORAS TRABALHADAS: 4h
+HORAS TRABALHADAS: 6h
